--- a/index.html
+++ b/index.html
@@ -6,3 +6,17 @@
         <title>Colmar Academy</title>
         <link rel="stylesheet" href="resources\css\styles.css" />
     </head>
+<!-- Header -->
+<header>
+    <div class="content">
+      <a href="index.html" class="logo"><img src="resources\images\ic-logo.svg" /><span>COLMAR</span>ACADEMY</a>
+      <nav class="desktop">
+        <ul>
+          <li><a href="#on-campus">On campus</a></li>
+          <li><a href="#online">Online</a></li>
+          <li><a href="#for-companies">For companies</a></li>
+          <li><a href="#sign-in">Sign in</a></li>
+        </ul>
+      </nav>          
+    </div>
+  </header>
