--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- Header -->
 <header>
     <div class="content">
-      <a href="index.html" class="logo"><img src="resources\images\ic-logo.svg" /><span>COLMAR</span>ACADEMY</a>
+      <a href="index.html" class="logo"><img src="resources\images\ic-logo.svg" /><p><strong>COLMAR</strong>ACADEMY</p></a>
       <nav class="desktop">
         <ul>
           <li><a href="#on-campus">On campus</a></li>
@@ -17,6 +17,31 @@
           <li><a href="#for-companies">For companies</a></li>
           <li><a href="#sign-in">Sign in</a></li>
         </ul>
+      </nav>
+      <nav class="mobile">
+        <ul>
+          <li><a href="#"><img src="resources\images\ic-logo.svg"></a></li>
+          <li><a href="#"><img src="resources/images/ic-on-campus.svg"></a></li>
+          <li><a href="#"><img src="resources/images/ic-online.svg"></a></li>
+          <li><a href="#"><img src="resources/images/ic-login.svg"></a></li>
+        </ul>
       </nav>          
     </div>
   </header>
+  <!-- Main Content -->
+  <div class="main-content">
+    <!-- Start Section -->
+    <div id="start-section" class="banner">
+     <div id="start-cta">
+        <div class="content center">
+            <div class="image-container">
+                <img src="resources/images/banner.jpg" />
+              </div>
+          <div class="tbanner">
+            <h1 class="learn">Learn something new everyday</h1>
+            <p class="lorem">Lorem ipsum dolor sic amet,<br>consectetur adipiscing elit</p>
+          </div>
+            <div class="button">Start here</div>
+        </div>
+     </div>
+    </div>
